Fixed - Alignment on homepage on banner ad

--- a/public/assets/css/_homepage.scss
+++ b/public/assets/css/_homepage.scss
@@ -238,6 +238,7 @@
   text-align: center;
   border-bottom: 2px solid white;
   border-top: 2px solid white;
+  padding-bottom: 11px;
 }
 
 .trend-link {
